# upgrade-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  render.yaml
data/: index.json  official_sources.json
data/cache/: fastapi-pydantic-v2.html  numpy-20-migration.html  pandas-20-whatsnew.html  pydantic-v2-migration.html  sqlalchemy-20-migration.html
deploy/kubernetes/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
extension/vscode/: .vscodeignore  README.md  package.json
extension/vscode/src/: extension.js
src/upgrade_copilot/: __init__.py  api.py  cli.py  config.py  repo.py  web.py
src/upgrade_copilot/eval/: answer_eval.py  retrieval_eval.py
src/upgrade_copilot/index/: __init__.py  embeddings.py  faiss_store.py  models.py
src/upgrade_copilot/ingest/: chunk.py  clean.py  fetch.py  sources.py
src/upgrade_copilot/rag/: answer.py  citations.py  prompts.py
src/upgrade_copilot/retrieval/: filters.py  search.py
src/upgrade_copilot/tools/: __init__.py  hints.py
tests/: test_answering.py  test_chunking.py  test_manifest_and_index.py  test_repo_dependencies.py  test_retrieval.py  test_smoke.py  test_web.py
